# mojave

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  justfile  start.sh  update_ethrex_rev.sh
.github/workflows/: lint-toml.yml  rust.yml
cmd/full-node/: Cargo.toml
cmd/full-node/src/: main.rs
cmd/mojave/: Cargo.toml  cli.rs  command.rs  full_node_options.rs  initializer.rs  lib.rs  logging.rs  mojave.rs  networks.rs  options.rs  sequencer_options.rs  version.rs
cmd/sequencer/: Cargo.toml
cmd/sequencer/src/: main.rs
config/: config.toml  genesis.json  node_key.json  priv_validator_key.json
crates/abci/: Cargo.toml
crates/abci/src/: api.rs  client.rs  cometbft.rs  config.rs  lib.rs  server.rs  types.rs
crates/block-builder/: Cargo.toml
crates/block-builder/src/: context.rs  error.rs  lib.rs  service.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  error.rs  lib.rs  types.rs
crates/evm/: Cargo.toml
crates/full-node/: Cargo.toml
crates/full-node/src/: cli.rs  dummy.rs  error.rs  lib.rs
crates/full-node/src/rpc/: block.rs  mod.rs  transaction.rs  types.rs
crates/json-rpc/: Cargo.toml
crates/json-rpc/src/: error.rs  filter.rs
crates/json-rpc/src/api/: eth.rs  eth_pubsub.rs  mod.rs  net.rs  web3.rs
crates/json-rpc/src/server/: http.rs  mod.rs  websocket.rs
crates/networking/: Cargo.toml
crates/networking/src/rpc/: mod.rs  utils.rs
crates/networking/src/rpc/clients/: mod.rs
crates/networking/src/rpc/clients/mojave/: errors.rs  mod.rs
crates/networking/src/rpc/full_node/: block.rs  mod.rs  transaction.rs
crates/networking/src/rpc/full_node/types/: mod.rs  transaction.rs
crates/networking/src/rpc/sequencer/: mod.rs  transaction.rs
crates/node/: Cargo.toml
crates/node/src/: args.rs  lib.rs  pool.rs  service.rs
crates/node/src/backend/: database.rs  env.rs  error.rs  evm.rs  mod.rs  storage.rs  transaction.rs
crates/node/src/backend/api/: abci.rs  eth.rs  eth_filter.rs  eth_pubsub.rs  mod.rs  net.rs  web3.rs
crates/proof-coordinator/: Cargo.toml
crates/proof-coordinator/src/: errors.rs  lib.rs
crates/prover/: Cargo.toml
crates/prover/src/: cli.rs  client.rs  lib.rs  message.rs  server.rs  types.rs
crates/prover/tests/: integration.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: config.rs  error.rs  filter.rs  lib.rs  server.rs  types.rs
crates/rpc/src/api/: eth.rs  eth_filter.rs  eth_pubsub.rs  eth_subscription.rs  mod.rs  net.rs  web3.rs
crates/rpc/src/server/: http.rs  mod.rs  websocket.rs
crates/sequencer/: Cargo.toml
crates/sequencer/src/: cli.rs  error.rs  lib.rs
crates/sequencer/src/block_producer/: context.rs  error.rs  mod.rs  service.rs
crates/sequencer/src/rpc/: mod.rs
crates/signature/: Cargo.toml
crates/signature/src/: ecdsa.rs  eddsa.rs  error.rs  lib.rs
crates/subscriber/: Cargo.toml
crates/subscriber/src/: args.rs  main.rs
crates/syncer/: Cargo.toml
crates/types/: Cargo.toml
crates/types/src/: lib.rs  rpc.rs
crates/utils/: Cargo.toml
crates/utils/src/: fs.rs  initializer.rs  lib.rs  logging.rs  options.rs  prover_options.rs  rpc.rs  unique_heap.rs
test_data/: genesis.json
