[workspace]
members = [
  "cmd/mojave",
  "crates/block-builder",
  # "crates/full-node",
  "crates/networking",
  "crates/syncer",
  # "crates/sequencer",
  "crates/utils",
  "crates/prover",
  "crates/proof-coordinator",
]
resolver = "2"

[workspace.dependencies]
# ethrex
ethrex = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1", default-features = false }
zkvm_interface = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1", default-features = false }
ethrex-blockchain = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1", default-features = false }
ethrex-l2 = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1", default-features = false }
ethrex-l2-common = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1", default-features = false }
ethrex-metrics = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1", default-features = false }
ethrex-rpc = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1", default-features = false }
ethrex-storage-rollup = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1", default-features = false }
ethrex-vm = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1", default-features = false }
ethrex-common = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1" }
ethrex-p2p = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1" }
ethrex-rlp = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1" }
ethrex-storage = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1" }
ethrex-prover = { git = "https://github.com/1sixtech/ethrex", rev = "d62fcc5accaaa13b9909af04071379219dc6a0b1" }

lazy_static = "1.5.0"

# mojave
mojave-block-builder = { path = "crates/block-builder" }
mojave-prover = { path = "crates/prover" }
mojave-chain-utils = { path = "crates/utils" }
mojave-networking = { path = "crates/networking" }

anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
secp256k1 = { version = "0.29.1", default-features = false }
k256 = { version = "0.13.3", features = ["ecdh"] }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", default-features = false }
rand = "0.8.5"
tokio-stream = { version = "0.1.17" }
tokio-util = { version = "0.7", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
trait-variant = "0.1"

reqwest = { version = "0.12.7", features = ["json"] }

[patch.crates-io]
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.29.1-sp1-5.0.0" }
