[package]
name = "mojave"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mojave"
path = "./mojave.rs"

[lib]
name = "mojave"
path = "./lib.rs"

[dependencies]
mojave-chain-full-node = { workspace = true }
mojave-chain-json-rpc = { workspace = true }

tokio = { workspace = true, features = ["full"] }

# async
futures = { workspace = true }


# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# misc
clap = { workspace = true, features = ["derive", "env", "string"] }
anyhow = { workspace = true }
