[package]
name = "mojave"
version = "0.1.0"
edition = "2021"

[lib]
name = "mojave"
path = "./lib.rs"

[[bin]]
name = "mojave"
path = "./mojave.rs"

[features]
default = []
metrics = ["ethrex-blockchain/metrics", "ethrex-l2/metrics", "ethrex/metrics"]

[dependencies]
mojave-chain-utils = { workspace = true }

anyhow = { workspace = true }

# misc
clap = { workspace = true, features = ["derive", "env", "string"] }

# ethrex
ethrex = { workspace = true, features = ["libmdbx", "c-kzg", "blst", "l2"] }
ethrex-blockchain = { workspace = true, features = ["l2"] }
ethrex-l2 = { workspace = true, features = ["l2"] }
ethrex-metrics = { workspace = true, features = ["l2"] }
ethrex-rpc = { workspace = true, features = ["l2"] }
ethrex-storage-rollup = { workspace = true, features = ["l2"] }
ethrex-vm = { workspace = true, features = ["l2"] }
ethrex-common = { workspace = true }
ethrex-p2p = { workspace = true }
ethrex-storage = { workspace = true }

k256 = { version = "0.13.3", features = ["ecdh"] }

lazy_static = { workspace = true }

local-ip-address = { version = "0.6" }
secp256k1 = { workspace = true, features = [
  "global-context",
  "recovery",
  "rand",
] }

serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

tokio-util = { workspace = true }

# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
