[package]
name = "mojave"
version = "0.1.0"
edition = "2021"

[lib]
name = "mojave"
path = "./lib.rs"

[[bin]]
name = "mojave"
path = "./mojave.rs"

[features]
default = []
metrics = ["ethrex-blockchain/metrics", "ethrex-l2/metrics", "ethrex/metrics"]
sql = ["ethrex/rollup_storage_sql"]
redb = ["ethrex/rollup_storage_redb"]
libmdbx = ["ethrex/rollup_storage_libmdbx"]

[dependencies]
# ours
mojave-chain-utils = { workspace = true }
mojave-networking = { workspace = true }

anyhow = { workspace = true }

# misc
clap = { workspace = true, features = ["derive", "env", "string"] }
cfg-if = "1.0"

# ethrex
ethrex = { workspace = true, features = ["libmdbx", "c-kzg", "blst", "l2"] }
ethrex-blockchain = { workspace = true, features = ["l2"] }
ethrex-l2 = { workspace = true, features = ["l2"] }
ethrex-metrics = { workspace = true, features = ["l2"] }
ethrex-rpc = { workspace = true }
ethrex-storage-rollup = { workspace = true, features = ["l2"] }
ethrex-vm = { workspace = true }
ethrex-common = { workspace = true }
ethrex-p2p = { workspace = true }
ethrex-storage = { workspace = true }

k256 = { workspace = true, features = ["ecdh"] }

lazy_static = { workspace = true }

local-ip-address = { version = "0.6" }
secp256k1 = { workspace = true, features = [
  "global-context",
  "recovery",
  "rand",
] }

serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

tokio-util = { workspace = true }

# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
