[package]
name = "mandu-abci"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
futures = { workspace = true }
prost = "0.13"
tendermint = "0.40"
tendermint-abci = "0.40"
tendermint-rpc = { version = "0.40", features = ["http-client", "websocket-client"] }
tendermint-proto = "0.40"
tokio = { workspace = true, features = ["full"] }