[package]
name = "mojave-block-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }

# ethrex
ethrex-blockchain = { workspace = true }
ethrex-common = { workspace = true, features = ["c-kzg"] }
ethrex-l2-common = { workspace = true }
ethrex-metrics = { workspace = true, features = ["metrics"] }
ethrex-rpc = { workspace = true }
ethrex-storage = { workspace = true }
ethrex-storage-rollup = { workspace = true }
ethrex-vm = { workspace = true }
