[package]
name = "mojave-full-node"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mojave-full-node"
path = "src/bin/main.rs"

[dev-dependencies]
mockito = "0.31"
ethrex-rlp = { workspace = true }
ctor = "0.4.2"

[dependencies]
# ethrex
ethrex = { workspace = true, features = ["libmdbx", "c-kzg", "blst", "l2"] }
ethrex-blockchain = { workspace = true }
ethrex-common = { workspace = true }
ethrex-l2-common = { workspace = true }
ethrex-p2p = { workspace = true }
ethrex-rpc = { workspace = true }
ethrex-storage = { workspace = true }
ethrex-storage-rollup = { workspace = true }
ethrex-vm = { workspace = true }

# mojave
mojave-chain-utils = { workspace = true }
mojave-client = { workspace = true }
mojave-signature = { workspace = true }

axum = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
