[package]
name = "mohave-chain-json-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
mohave-chain-types = { workspace = true }

futures = { workspace = true }
jsonrpsee = { version = "0.24", features = ["server"] }
hyper = "1.6.0"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors"] }

# misc
tracing = { workspace = true }
trait-variant = { workspace = true }
