[package]
name = "mojave-networking"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal project dependencies
mojave-chain-utils = { workspace = true }

axum = "0.8.1"
hex = "0.4.3"
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# ethrex
ethrex-blockchain = { workspace = true }
ethrex-common = { workspace = true }
ethrex-p2p = { workspace = true }
ethrex-rpc = { workspace = true }
ethrex-storage = { workspace = true }
ethrex-storage-rollup = { workspace = true }
ethrex-vm = { workspace = true }

thiserror = { workspace = true }

# serde
serde = { workspace = true, features = ["derive"] }

secp256k1 = { workspace = true, features = [
  "global-context",
  "recovery",
  "rand",
] }
k256 = { workspace = true, features = ["ecdh"] }

reqwest = { workspace = true }


[dev-dependencies]
mockito = "0.31"
ethrex-rlp = { workspace = true }
rand.workspace = true
