[package]
name = "drip-chain-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "drip-chain-node"
path = "src/bin/main.rs"

[dependencies]
anvil = { git = "https://github.com/foundry-rs/foundry", rev = "d484a00089d789a19e2e43e63bbb3f1500eb2cbf" }
futures = { workspace = true }
drip-chain-abci = { workspace = true }
drip-chain-rpc = { workspace = true }
drip-chain-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
