[package]
name = "mojave-chain-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mojave-chain-node"
path = "src/bin/main.rs"

[dependencies]
mojave-chain-json-rpc = { workspace = true }
mojave-chain-types = { workspace = true }

anvil = { git = "https://github.com/foundry-rs/foundry", rev = "d484a00089d789a19e2e43e63bbb3f1500eb2cbf" }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# misc 
thiserror = { workspace = true }
clap = { workspace = true, features = ["derive"] }
