[package]
name = "drip-chain-subscriber"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.12", features = ["full"] }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }
